--- a/package.json
+++ b/package.json
@@ -8,21 +8,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/x-date-pickers": "^7.5.0",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.8",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.11.2",
     "react-flatpickr": "^3.10.13",
     "react-icons": "^5.0.1",
+    "react-mm-nrcform": "^1.0.2",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
     "survey-core": "^1.9.137",
     "survey-react-ui": "^1.9.137",
+    "surveyjs-widgets": "^1.10.5",
     "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
