--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.15.18",
     "@mui/x-date-pickers": "^7.5.0",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
+    "bootstrap-datepicker": "^1.10.0",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "jquery": "^3.7.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
