--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "chartjs-adapter-moment": "^1.0.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.11.2",
