--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "survey-core": "^1.9.137",
     "survey-react-ui": "^1.9.137",
     "surveyjs-widgets": "^1.10.5",
-    "sweetalert2": "^11.10.7"
+    "sweetalert2": "^11.10.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
