--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chartjs-adapter-moment": "^1.0.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
     "js-file-download": "^0.4.12",
