--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@mui/material": "^5.15.18",
     "@mui/x-date-pickers": "^7.5.0",
     "@tailwindcss/forms": "^0.5.7",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-datepicker": "^1.10.0",
     "chart.js": "^4.4.1",
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.4",
     "react": "^18.2.0",
