--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_SERVER_DOMAIN = http://192.168.100.17:3000
-VITE_SERVER_DOMAIN = http://localhost:3000
+VITE_SERVER_DOMAIN = http://192.168.100.17:3000
+# VITE_SERVER_DOMAIN = http://localhost:3000
